# cosmo-edge

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_STYLE.md  CONTRIBUTING.md  Dockerfile.sophon  Dockerfile.x86  LICENSE  MIRRORING.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  docker-compose.sophon.yml  docker-compose.x86.windows.yml  docker-compose.x86.yml  package-lock.json  package.json
3rd/libuuid-1.0.3/: CMakeLists.txt  Makefile  config.status  libtool  uuid.pc
3rd/searchtool/: CMakeLists.txt  README.md
3rd/searchtool/scripts/: package-windows.bat  package-windows.ps1
3rd/searchtool/src/: MainWindow.cpp  MainWindow.h  main.cpp
3rd/uSockets/: CMakeLists.txt
src/api/: ApiRouter.cc  ApiRouter.h  ApiRouterInternal.h  ApiRouterRoutes.cc  CMakeLists.txt  HttpUploadClaim.cc  HttpUploadClaim.h  MessageAlgorithmHandler.cc  MessageAlgorithmHandler.h  MessageAudioHandler.cc  MessageAudioHandler.h  MessageAuthHandler.cc  MessageAuthHandler.h  MessageBodyLibHandler.cc  MessageBodyLibHandler.h  MessageCameraHandler.cc  MessageCameraHandler.h  MessageEventHandler.cc  MessageEventHandler.h  MessageFaceLibHandler.cc  MessageFaceLibHandler.h  MessageFaceLibHandler_ModifyLib.cc  MessageFaceLibHandler_ModifyPic.cc  MessageFaceLibHandler_Query.cc  MessageHandler.cc  MessageHandler.h  MessageImportFileHandler.cc  MessageImportFileHandler.h  MessageLinkageHandler.cc  MessageLinkageHandler.h  MessageLiveStreamHandler.cc  MessageLiveStreamHandler.h  MessageModelHandler.cc  MessageModelHandler.h  MessageNetworkHandler.cc  MessageNetworkHandler.h  MessageOnboardingHandler.cc  MessageOnboardingHandler.h  MessageScheduleHandler.cc  MessageScheduleHandler.h  (+7 more)
src/db/: ArticlesReidDao.cc  ArticlesReidDao.h  CMakeLists.txt  ConditionBuilder.cc  ConditionBuilder.h  DaoBase.cc  DaoBase.h  DbTypes.h  FaceTaskEventDao.cc  FaceTaskEventDao.h  PassengerFlowDao.cc  PassengerFlowDao.h  PersonDao.cc  PersonDao.h  PersonDaoQuery.cc  PersonRecogDao.cc  PersonRecogDao.h  RowFieldReader.cc  RowFieldReader.h  TaskEventDao.cc  TaskEventDao.h  TransactionGuard.h
src/flow/: CMakeLists.txt
src/flow/action/: ActionBranch.cc  ActionBranch.h  ActionBranchMng.h  ActionInstMngBase.h  ActionParam.cc  ActionParam.h  AlgActionBase.cc  AlgActionBase.h  PActionBase.cc  PActionBase.h
src/flow/alarm/: AreaAlarm.cc  AreaAlarm.h  AreaAlarmInternalTypes.h  AreaAlarmMng.h  AreaAlarmParam.cc  AreaAlarmPassFlow.cc  AreaAlarmTargetAlarm.cc  AreaAlarmTargetLimit.cc  AreaAlarmWrongDirection.cc  TaskAlarm.cc  TaskAlarm.h  TaskAlarmEventBuilder.cc  TaskAlarmHandler.cc  TaskAlarmInternalTypes.h  TaskAlarmLlmReview.cc  TaskAlarmMedia.cc  TaskAlarmMng.h  TaskAlarmPicture.cc  TaskAlarmSuppression.cc  TaskAlarmSuppression.h  TaskAlarmUpload.cc  TaskFaceAlarm.cc  TaskFaceAlarm.h  TaskFaceAlarmMng.cc  TaskFaceAlarmMng.h
src/flow/channel/: AlgChannel.cc  AlgChannel.h  AlgChannelDecode.cc  AlgChannelDecode.h  AlgChannelDecodeCapture.cc  AlgChannelDemux.cc  (+11 more)
src/infer/: AiClassifierForward.cc  AiClassifierUnify.cc  AiClassifierUnify.h  AiCommon.cc  AiCommon.h  AiCommonHelper.cc  AiComponment.cc  AiComponment.h  AiDetectInterface.cc  AiDetectInterface.h  AiDetectorUnify.cc  AiDetectorUnify.h  AiLandmarkInterface.cc  AiLandmarkInterface.h  AiLandmarkerUnify.cc  AiLandmarkerUnify.h  AiOcrWordClassifierUnify.cc  AiOcrWordClassifierUnify.h  AiRecognizerInterface.cc  AiRecognizerInterface.h  AiRecognizerUnify.cc  AiRecognizerUnify.h  AiTrackerUnify.cc  AiTrackerUnify.h  AiVideoQualityUnify.cc  AiVideoQualityUnify.h  BmodelTool.cc  BmodelTool.h  CMakeLists.txt  DinoDetectorUnify.cc  DinoDetectorUnify.h  InferPoolTypes.h  Qwen3VLUnify.cc  Qwen3VLUnify.h  Sam2SegmenterUnify.cc  Sam2SegmenterUnify.h
src/linkage/: CMakeLists.txt  LinkAgeAlarm.cc  LinkAgeAlarm.h  LinkAgeAudioDevice.cc  LinkAgeAudioDevice.h  LinkAgeBase.cc  LinkAgeBase.h  LinkAgeBaseCommon.cc  LinkAgeBaseCommon.h  LinkAgeTask.cc  LinkAgeTask.h
src/media/: CMakeLists.txt  Color.h  FileDemuxStrategy.cc  FileDemuxStrategy.h  IDemuxStrategy.h  IOsdTextRenderer.h  IVideoFrameProc.h  OsdTextRenderer.cc  OsdTextRenderer.h  PixelFormat.h  PixelFormatUtils.cc  PixelFormatUtils.h  PreviewPipelineMetrics.cc  PreviewPipelineMetrics.h  RtspDemuxStrategy.cc  RtspDemuxStrategy.h  UsbDemuxStrategy.cc  UsbDemuxStrategy.h  VideoCodecType.h  VideoDecoder.cc  VideoDecoder.h  VideoDecoderCpu.cc  VideoDecoderCpu.h  VideoDecoderCreateCpu.cc  VideoDecoderCreateSophon.cc  VideoDecoderSophon.cc  VideoDecoderSophon.h  VideoDemuxer.cc  VideoDemuxer.h  VideoDemuxerStream.cc  VideoEncoder.cc  VideoEncoder.h  VideoEncoderCpu.cc  VideoEncoderCpu.h  VideoEncoderCreateCpu.cc  VideoEncoderCreateSophon.cc  VideoEncoderSophon.cc  VideoEncoderSophon.h  VideoFrame.cc  VideoFrame.h  (+14 more)
src/mem/: Allocator.h  AllocatorCpu.cc  AllocatorCpu.h  AllocatorSophon.cc  AllocatorSophon.h  Block.h  BlockFreqCalc.cc  BlockFreqCalc.h  CMakeLists.txt  DeviceContext.h  DeviceContextCpu.cc  DeviceContextSophon.cc  FixedBlockPool.cc  FixedBlockPool.h  IDeviceContext.h  MemoryPoolMng.cc  MemoryPoolMng.h
src/network/: CMakeLists.txt
src/nn/: CMakeLists.txt
src/platform/: CMakeLists.txt  NetCardOp.cc  NetCardOp.h  NetCardOpConfig.cc  NetCardOpInternal.h  PlatformConstants.h  SystemReboot.cc  SystemReboot.h  SystemTime.cc  SystemTime.h  WatchDog.cc  WatchDog.h
src/service/: CMakeLists.txt
src/util/: AiTypes.h  ArchiveListingValidator.cc  ArchiveListingValidator.h  AsyncQueue.h  CMakeLists.txt  CipherUtil.cc  CipherUtil.h  DateTimeFormat.cc  DateTimeFormat.h  DurationLogger.cc  DurationLogger.h  DurationStat.cc  DurationStat.h  EnvUtil.h  ErrorCode.cc  ErrorCode.h  Exception.cc  Exception.h  Exec.cc  Exec.h  FileUtil.cc  FileUtil.h  FormatString.h  FpsCalc.cc  FpsCalc.h  FpsCtrl.cc  FpsCtrl.h  GeometricCalculation.h  GeometricPos.cc  GeometricPos.h  IRequestDispatcher.h  InferConstants.h  InstancePool.h  JsonCompat.h  JsonFieldOpt.h  JsonFileUtil.cc  JsonFileUtil.h  JsonStructUtil.h  Keys.h  LimitedType.h  (+43 more)
(+1464 files in other folders)
